# windows-kernel-sys

./: Cargo.toml  README.md  build.rs
src/: base.rs  lib.rs  ntoskrnl.rs  wrapper.c  wrapper.h
